<resources>
    <array name="ld_activityScreenTitles">
        <item>Home</item>
        <item>Orders</item>
        <item>Favourites</item>
        <item>Cart</item>
        <item>Wallet</item>
        <item>Discounts</item>
        <item>Notifications</item>
        <item>Rate Us</item>
        <item>Terms &amp; Conditions</item>
        <item>Help &amp; Support</item>
        <item>Settings</item>
    </array>

    /*Font-name*/
    <array name="ld_activityScreenIcons">
        <item>@drawable/go</item>
        <item>@drawable/orders</item>
        <item>@drawable/favourite</item>
        <item>@drawable/cart</item>
        <item>@drawable/wallet</item>
        <item>@drawable/discounts</item>
        <item>@drawable/notification</item>
        <item>@drawable/rate</item>
        <item>@drawable/support</item>
        <item>@drawable/ic_terms</item>
        <item>@drawable/gear</item>
    </array>

    <string name="app_name">Groceteria</string>


    <string name="font_poppins_Bold">Poppins-Bold.ttf</string>
    <string name="font_poppins_Light">Poppins-Light.ttf</string>
    <string name="font_poppins_Regular">Poppins-Regular.ttf</string>
    <string name="font_poppins_SemiBold">Poppins-SemiBold.ttf</string>
    <string name="hello">Hello,</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="go">go</string>
    <string name="forgot_passoword">Forgot Passoword ?</string>
    <string name="create_account">Create Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="account">Account</string>
    <string name="create_your">Create Your</string>
    <string name="new_user">New User ?</string>
    <string name="title">Title</string>
    <string name="remeber_me">Remember Me</string>
    <string name="search_your_product">Search your product</string>
    <string name="your_last_purchases">Your Last Purchases</string>
    <string name="view_all">View All</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>

    <string name="logout">LogOut</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="_1">1</string>
    <string name="add">+</string>
    <string name="sub">—</string>
    <string name="benefits">Benefits</string>
    <string name="reviews">Reviews</string>
    <string name="features">Features</string>
    <string name="description">Description</string>
    <string name="_4_5_5">4.5 / 5 </string>
    <string name="_40">40</string>
    <string name="rs_25">Rs. 25</string>
    <string name="green_apple_1_kg">Green Apple (1 kg)</string>
    <string-array name="suggestions">
        <item>Apple</item>
        <item>Apricot</item>
        <item>Avocado</item>
        <item>Banana</item>
        <item>Blueberry</item>
        <item>Blackberry</item>
        <item>Carrot</item>
        <item>Cherry</item>
        <item>Orange</item>
        <item>Potato</item>
        <item>Peach</item>
        <item>Passion fruit</item>
        <item>Pear</item>
        <item>Strawberry</item>
    </string-array>
</resources>
