<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProdDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="13dp"
                    android:src="@drawable/search"
                    android:tint="@color/yellow" />

                <ImageView
                    android:id="@+id/img_filter"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="13dp"
                    android:src="@drawable/notification" />

                <ImageView
                    android:id="@+id/img_add"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="13dp"
                    android:src="@drawable/cart" />

            </LinearLayout>

            <com.example.groceteria.CustomWidgets.CustomTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="3dp"
                android:paddingEnd="70dp"
                android:text="@string/app_name"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                app:fontName="@string/font_poppins_Bold" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2">

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionbar">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.example.groceteria.CustomWidgets.CustomButton
                android:id="@+id/btnBuyNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@color/yellow"
                android:text="@string/buy_now"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:fontName="@string/font_poppins_SemiBold" />

            <com.example.groceteria.CustomWidgets.CustomButton
                android:id="@+id/btnAddtoCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@color/green"
                android:text="@string/add_to_cart"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:fontName="@string/font_poppins_SemiBold" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/yellow"
                    android:text="@string/sub"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/increment"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/yellow"
                    android:text="@string/add"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@+id/display"
                    app:layout_constraintStart_toEndOf="@+id/display"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/display"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rectangle"
                    android:paddingTop="10dp"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/decrement"
                    app:layout_constraintStart_toEndOf="@+id/decrement"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpProdImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        </androidx.viewpager.widget.ViewPager>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpProdDetails"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/relative"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabProdDetails"
            app:layout_constraintVertical_bias="0.0" />

        <com.example.groceteria.CustomWidgets.CustomTextView
            android:id="@+id/prodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/green_apple_1_kg"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:fontName="@string/font_poppins_SemiBold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vpProdImage" />

        <com.example.groceteria.CustomWidgets.CustomTextView
            android:id="@+id/txtprodRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rs_25"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:fontName="@string/font_poppins_SemiBold"
            app:layout_constraintStart_toStartOf="@+id/prodName"
            app:layout_constraintTop_toBottomOf="@+id/prodName" />

        <com.example.groceteria.CustomWidgets.CustomTextView
            android:id="@+id/txtPreviousRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_40"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:fontName="@string/font_poppins_Regular"
            app:layout_constraintBottom_toBottomOf="@+id/txtprodRate"
            app:layout_constraintStart_toEndOf="@+id/txtprodRate"
            app:layout_constraintTop_toTopOf="@+id/txtprodRate" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_navigation_chip"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/tabProdDetails"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txtPreviousRate"
            app:layout_constraintTop_toTopOf="@+id/txtPreviousRate">

            <com.example.groceteria.CustomWidgets.CustomTextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/_4_5_5"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:fontName="@string/font_poppins_SemiBold"
                app:layout_constraintBottom_toBottomOf="@+id/txtprodRate"
                app:layout_constraintEnd_toEndOf="@+id/btnLike"
                app:layout_constraintTop_toTopOf="@+id/txtprodRate"
                app:layout_constraintVertical_bias="0.39" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:tint="@color/green"
                app:layout_constraintBottom_toBottomOf="@+id/txtRating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtRating"
                app:layout_constraintTop_toTopOf="@+id/txtRating"
                numberpicker:srcCompat="@drawable/star" />


        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabProdDetails"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:tabBackground="@drawable/tab_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtprodRate"
            app:tabGravity="center"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="35"
                android:text="@string/description"
                android:textAlignment="center" />

            <com.google.android.material.tabs.TabItem
                android:layout_weight="35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews" />

            <com.google.android.material.tabs.TabItem
                android:layout_weight="35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefits" />

        </com.google.android.material.tabs.TabLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/green"
            app:layout_constraintBottom_toTopOf="@+id/prodName"
            app:layout_constraintEnd_toEndOf="parent">

            <com.like.LikeButton
                android:id="@+id/btnLike"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                app:icon_size="18dp"
                app:icon_type="heart"
                app:like_drawable="@drawable/heart_on"
                app:unlike_drawable="@drawable/heart_off" />


        </RelativeLayout>

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/titles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/vpProdImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/vpProdImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>